--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "16",
   "version": "0.1.0",
   "private": true,
+  
+  "homepage":  "https://al-names.github.io/react-journal/",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "jquery": "^3.3.1",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
@@ -13,6 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
